Modernizing gradle. Modernining javalin. Modernizing code. Fixing javadoc bugs. Moderninizing structure. Major refactoring.